Fixed font in windows and letter spacing in apple

--- a/app/assets/stylesheets/apple.scss
+++ b/app/assets/stylesheets/apple.scss
@@ -14,4 +14,9 @@ html.apple {
       font-weight: 300;
     }
   }
+
+  // Reset letter-spacing for small text
+  .info, .application.about > div {
+    letter-spacing: normal;
+  }
 }
